👀 优化手机端

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>One Hub</title>
+    <title>Clivia API</title>
     <link rel="icon" href="/favicon.ico" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="%sveltekit.assets%/manifest.json" crossorigin="use-credentials" />
     <meta name="theme-color" content="#2296f3" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover, maximum-scale=1" />
+		<meta name="robots" content="noindex,nofollow" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-capable" content="yes">
     <meta
       name="description"
       content="OpenAI 接口聚合管理，支持多种渠道包括 Azure，可用于二次分发管理 key，仅单可执行文件，已打包好 Docker 镜像，一键部署，开箱即用"
